<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ToggleButton
        android:id="@+id/toggleDrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:onClick="toggleDrainClicked"
        android:textOff="@string/turnOnDrain"
        android:textOn="@string/turnOffDrain" />

    <ViewFlipper
        android:id="@+id/imageflipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/toggleDrain"
        android:layout_alignParentLeft="true"
        android:flipInterval="200" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logoYellow"
            android:scaleType="centerInside"
            android:src="@drawable/pitcher_yellow" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logoOrange"
            android:scaleType="centerInside"
            android:src="@drawable/pitcher_orange" />
    </ViewFlipper>

    <FrameLayout
        android:id="@+id/frameVideoLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/toggleDrain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:visibility="gone" >

        <VideoView
            android:id="@+id/videoLogo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/toggleDrain"
        android:layout_centerHorizontal="true" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBoxBluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/checkboxBluetooth" />

                <CheckBox
                    android:id="@+id/checkBoxBrightness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/checkboxBrightness" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBoxVibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/vibrateCheckbox" />

                <CheckBox
                    android:id="@+id/checkBoxGPS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/checkboxGPS" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBoxLED"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/flashCheckbox" />

                <CheckBox
                    android:id="@+id/checkBoxVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/videoCheckbox" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBoxWifiAP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/wifiAPCheckbox" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Chronometer
        android:id="@+id/drainTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/emptyChrono" />

    <TextView
        android:id="@+id/batteryPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/batteryPercent" />

</RelativeLayout>